--- a/style.css
+++ b/style.css
@@ -32,5 +32,12 @@ body{
     position: absolute;
     top: 70px;
 }
+.fa-quote-right{
+    left: 40px;
+}
+
+.fa-quote-left{
+    right: 40px;
+}
 
 
