this styling for media query

--- a/style.css
+++ b/style.css
@@ -40,4 +40,12 @@ body{
     right: 40px;
 }
 
+@media (max-width:768px){
+    .testimonial-container{
+        padding: 20px 30px;
+    }
 
+    .fa-quote{
+        display: none;
+    }
+}
