this styling for testimonial:+

--- a/style.css
+++ b/style.css
@@ -40,6 +40,12 @@ body{
     right: 40px;
 }
 
+.testimonial {
+    line-height: 28px;
+    text-align: justify;
+}
+
+
 @media (max-width:768px){
     .testimonial-container{
         padding: 20px 30px;
